implementando inserção, listagem e edição de patrocinadores

--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -3,7 +3,7 @@
 {% block title %}Login | Eventos UFPI{% endblock %}
 
 {% block content %}
-    <section class="hero is-light is-medium" style="min-height: 80vh">
+    <section class="section has-background-grey-lighter" style="min-height: 80vh">
     <div class="hero-body">
         <div class="box" id="login-box">
             <form action="{% url 'core:login' %}" method="POST">
