--- a/eventos/templates/eventos/novo-patrocinador.html
+++ b/eventos/templates/eventos/novo-patrocinador.html
@@ -1,70 +1,34 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends 'core/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <script src="js/main.js"></script>
-    <title>Index | Eventos UFPI</title>
-</head>
+{% load widget_tweaks %}
 
-<body>
-    <nav class="navbar is-dark is-bold" role="navigation" aria-label="main navigation">
-        <div class="container" id="navbar-container">
-            <div class="navbar-brand">
-                <a class="navbar-item" id="logo" href="#">EVENTOS | UFPI</a>
-                <a id="navbar-burger" role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-                    data-target="navbar" onclick="toggleMenu()">
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                </a>
+{% block content %}
+    <section class="section has-background-grey-lighter" style="min-height: 90vh;">
+        {% if success_message %}
+            <div class="notification is-success" style="max-width: 950px; margin: 0 auto 10px">
+                <button class="delete"></button>
+                <strong>{{ success_message }}</strong>
             </div>
-            <div id="navbar" class="navbar-menu">
-                <div class="navbar-end">
-                    <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link">
-                            Ricardo
-                        </a>
-
-                        <div class="navbar-dropdown">
-                            <a class="navbar-item">
-                                Meus Eventos
-                            </a>
-                            <hr class="navbar-divider">
-                            <a class="navbar-item">
-                                Sair
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <section class="section has-background-light" style="min-height: 90vh;">
+        {% endif %}
         <div class="container box" style="max-width: 950px; min-height: 80vh;">
             <h1 class="title has-text-centered has-icons-right is-2">
-                <span>Editar - OLIMPÍADA IBERO-AMERICANA DE QUÍMICA 2020</span>
+                <span>Editar | {{ evento }}</span>
                 <!-- <span class="icon is-large"><i class="fas fa-edit"></i></span> -->
             </h1>
             <div class="tabs is-centered is-boxed">
                 <ul>
-                    <li><a>Infos e Contatos</a></li>
-                    <li><a>Dias de Eventos</a></li>
-                    <li><a>Palestrantes</a></li>
-                    <li class="is-active"><a>Patrocinadores</a></li>
+                    <li><a href="{% url 'eventos:editar-info' slug=evento.slug %}">Infos e Contatos</a></li>
+                    <li><a href="{% url 'eventos:dias-atividades' slug=evento.slug dia=1 %}">Dias de Eventos</a></li>
+                    <li><a href="{% url 'eventos:palestrantes' slug=evento.slug %}">Palestrantes</a></li>
+                    <li class="is-active"><a
+                            href="{% url 'eventos:patrocinadores' slug=evento.slug %}">Patrocinadores</a></li>
                     <li><a>Realizadores</a></li>
                     <li><a>Apoiadores</a></li>
                 </ul>
             </div>
             <article class="panel is-dark" style="max-width: 720px; margin: 0 auto;">
                 <p class="panel-heading has-text-centered" style="display: flex; justify-content: space-between;">
-                    <a class="link has-text-light">
+                    <a href="{% url 'eventos:patrocinadores' slug=evento.slug %}" class="link has-text-light">
                         <span class="icon">
                             <i class="fas fa-arrow-left"></i>
                         </span>
@@ -78,6 +42,7 @@
                 </p>
 
                 <form method="POST" enctype="multipart/form-data" style="margin: 20px 10px;">
+                    {% csrf_token %}
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
                             <label class="label">Nome</label>
@@ -85,7 +50,8 @@
                         <div class="field-body">
                             <div class="field">
                                 <p class="control is-expanded has-icons-left">
-                                    <input class="input" type="text">
+                                    {% render_field p_form.nome class="input" placeholder="Nome do patrocinador" %}
+                                    {#                                    <input class="input" type="text" placeholder="Nome do patrocinador">#}
                                     <span class="icon is-small is-left">
                                         <i class="fas fa-user"></i>
                                     </span>
@@ -93,7 +59,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
                             <label class="label">Link</label>
@@ -101,7 +67,8 @@
                         <div class="field-body">
                             <div class="field">
                                 <p class="control is-expanded has-icons-left">
-                                    <input class="input" type="url" placeholder="LinkedIn, Facebook, Homepage...">
+                                    {% render_field p_form.link class="input" placeholder="LinkedIn, Facebook, Homepage..." %}
+                                    {#                                    <input class="input" type="url" placeholder="LinkedIn, Facebook, Homepage...">#}
                                     <span class="icon is-small is-left">
                                         <i class="fas fa-link"></i>
                                     </span>
@@ -117,18 +84,25 @@
                         <div class="field-body">
                             <div class="field">
                                 <p class="control has-icons-left">
-                                    <div id="file-js-example" class="file has-name is-fullwidth">
-                                        <label class="file-label">
-                                            <input class="file-input" type="file" name="resume">
-                                            <span class="file-cta">
+                                <div id="file-js-example" class="file has-name is-fullwidth">
+                                    <label class="file-label">
+                                        {% render_field p_form.foto class="file-input" name="resume" %}
+                                        {#                                        <input class="file-input" type="file" name="resume">#}
+                                        <span class="file-cta">
                                                 <span class="file-icon">
                                                     <i class="fas fa-upload"></i>
                                                 </span>
-                                                <span class="file-label">Selecione um arquivo</span>
+{#                                                    <span class="file-label">Selecionar</span>#}
                                             </span>
-                                            <span class="file-name">Nenhum Arquivo Selecionado</span>
-                                        </label>
-                                    </div>
+                                        <span class="file-name">
+                                            {% if p.foto %}
+                                                <span class="file-label">{{ p.foto.name }}</span>
+                                            {% else %}
+                                                <span class="file-label">Nenhum Arquivo Selecionado</span>
+                                            {% endif %}
+                                        </span>
+                                    </label>
+                                </div>
                                 </p>
                             </div>
                         </div>
@@ -142,7 +116,7 @@
                             <div class="field">
                                 <div class="control has-icon">
                                     <button class="button is-dark is-outlined is-fullwidth"
-                                        style="max-width: 400px; margin: 0 auto 16px;">
+                                            style="max-width: 400px; margin: 0 auto 16px;">
                                         <span>Confirmar</span>
                                     </button>
                                 </div>
@@ -153,13 +127,6 @@
             </article>
         </div>
     </section>
-    <footer class="footer hero is-dark">
-        <div class="content has-text-centered">
-            <p>
-                Developed by LASCO&#8482;
-            </p>
-        </div>
-    </footer>
 
     <script>
         const fileInput = document.querySelector('#file-js-example input[type=file]');
@@ -169,8 +136,16 @@
                 fileName.textContent = fileInput.files[0].name;
             }
         }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            (document.querySelectorAll('.notification .delete') || []).forEach(($delete) => {
+                $notification = $delete.parentNode;
+
+                $delete.addEventListener('click', () => {
+                    $notification.parentNode.removeChild($notification);
+                });
+            });
+        });
     </script>
 
-</body>
-
-</html>
+{% endblock %}
