--- a/eventos/templates/eventos/editar-atividade.html
+++ b/eventos/templates/eventos/editar-atividade.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 {% block content %}
-    <section class="section has-background-light" style="min-height: 90vh;">
+    <section class="section has-background-grey-lighter" style="min-height: 90vh;">
         {% if success_message %}
             <div class="notification is-success" style="max-width: 950px; margin: 0 auto 10px">
                 <button class="delete"></button>
@@ -21,7 +21,7 @@
                         de
                         Eventos</a></li>
                     <li><a href="{% url 'eventos:palestrantes' slug=evento.slug %}">Palestrantes</a></li>
-                    <li><a>Patrocinadores</a></li>
+                    <li><a href="{% url 'eventos:patrocinadores' slug=evento.slug %}">Patrocinadores</a></li>
                     <li><a>Realizadores</a></li>
                     <li><a>Apoiadores</a></li>
                 </ul>
