edição de evento finalizada

--- a/administrador/templates/administrador/listar_organizadores.html
+++ b/administrador/templates/administrador/listar_organizadores.html
@@ -31,7 +31,7 @@
                         </p>
                     </div>
                 </form>
-                <table class="table is-striped is-bordered is-fullwidth is-hoverable" style="margin-top: 15px;">
+                <table class="table is-striped is-fullwidth is-hoverable" style="margin-top: 15px;">
                     <thead>
                     <tr>
                         <th>Nome</th>
