--- a/eventos/templates/eventos/editar-evento-info-contato.html
+++ b/eventos/templates/eventos/editar-evento-info-contato.html
@@ -21,8 +21,8 @@
                     <li><a href="{% url 'eventos:dias-atividades' slug=evento.slug dia=1 %}">Dias de Eventos</a></li>
                     <li><a href="{% url 'eventos:palestrantes' slug=evento.slug %}">Palestrantes</a></li>
                     <li><a href="{% url 'eventos:patrocinadores' slug=evento.slug %}">Patrocinadores</a></li>
-                    <li><a>Realizadores</a></li>
-                    <li><a>Apoiadores</a></li>
+                    <li><a href="{% url 'eventos:realizadores' slug=evento.slug %}">Realizadores</a></li>
+                    <li><a href="{% url 'eventos:apoiadores' slug=evento.slug %}">Apoiadores</a></li>
                 </ul>
             </div>
             <form style="margin-bottom: 20px;" action="{% url 'eventos:editar-info' slug=evento.slug %}"
